@@ -128,7 +128,6 @@ void CMainMDIFrame::OnCreate()
 	// m_bUseReBar = FALSE;				// Don't use rebars
 	// m_bUseThemes = FALSE;            // Don't use themes
 	// m_bUseToolBar = FALSE;			// Don't use a toolbar
-	// m_bUseCustomDraw = FALSE;		// Don't use custom draw for menu items
 
 	// call the base class function
 	CMDIFrame::OnCreate();
